# guitar_multi_effect

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
components/audio_fx/: CMakeLists.txt  audio_fx.c
components/audio_fx/include/: audio_fx.h
components/audio_i2s/: CMakeLists.txt  audio_i2s.c  audio_i2s.h
components/audio_task/: CMakeLists.txt  audio_task.c
components/audio_task/include/: audio_task.h
components/board/: CMakeLists.txt
components/board/include/: board_pins.h
components/effect_type/include/: effect_type.h
components/nvs_manager/: CMakeLists.txt  nvs_manager.c  nvs_manager.h
components/ui/: CMakeLists.txt  ui_app.c
components/ui/include/: ui_app.h
main/: CMakeLists.txt  audio_fx.c  board_init.c  board_init.h  board_pins.h  idf_component.yml  lcd_driver.c  lcd_driver.h  lvgl_adapter.c  lvgl_adapter.h  main.c  spi_bus.c  spi_bus.h  touch_driver.c  touch_driver.h
